--- a/psha-api/dockerfile
+++ b/psha-api/dockerfile
@@ -1,6 +1,14 @@
 # Gunakan Python resmi
 FROM python:3.11-slim
 
+# Install sistem dependencies (build tools, gfortran, HDF5, dll)
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    gfortran \
+    libhdf5-dev \
+    libatlas-base-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 # Atur working directory
 WORKDIR /app
 
@@ -16,5 +24,5 @@ COPY . .
 # Expose port FastAPI
 EXPOSE 8000
 
-# Jalankan server
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Jalankan server dengan Gunicorn + Uvicorn workers (production)
+CMD ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "app.main:app", "--bind", "0.0.0.0:8000"]
