--- a/psha-web/package.json
+++ b/psha-web/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "start": "node server.cjs",
+    "start": "node server.js",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
