fix fe railway 12

--- a/Railway.toml
+++ b/Railway.toml
@@ -22,11 +22,12 @@ name = "sha-web"
 path = "psha-web"
 type = "static"
 build_command = "npm install && npm run build"
-start_command = "npx serve -s dist -l $PORT"
+start_command = "npm run preview"
 
 [services.frontend.env]
 VITE_API_URL = "https://sha-api-production.up.railway.app/api/v1"
-
+VITE_SAVE_MODE = "server"
+VITE_APP_NAME = "PSHA Web"
 
 # =========================
 # PostgreSQL Service
