--- a/psha-web/package.json
+++ b/psha-web/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port $PORT --host",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -15,7 +15,6 @@
     "@headlessui/react": "^2.2.7",
     "axios": "^1.11.0",
     "chart.js": "^4.4.0",
-    "express": "^5.1.0",
     "gh-pages": "^6.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
