--- a/psha-web/Dockerfile
+++ b/psha-web/Dockerfile
@@ -23,4 +23,4 @@ ENV PORT $PORT
 EXPOSE $PORT
 
 # Jalankan server
-CMD ["serve", "-s", "dist", "-l", "0.0.0.0:$PORT"]
+CMD ["serve", "-s", "dist", "-l", "0.0.0.0", "-p", "$PORT"]
