--- a/psha-web/Dockerfile
+++ b/psha-web/Dockerfile
@@ -2,25 +2,29 @@
 FROM node:20 AS builder
 WORKDIR /app
 
+# Copy package.json & package-lock.json dari folder psha-web
 COPY package.json package-lock.json ./
 RUN npm install
 
-COPY . .
+# Copy semua kode
+COPY . ./
+
+# Build Vite frontend
 RUN npm run build
 
 # Stage 2: Serve
 FROM node:20-alpine AS runner
 WORKDIR /app
 
-# Install serve globally
+# Install serve
 RUN npm install -g serve
 
-# Copy build output
+# Copy hasil build dari stage builder
 COPY --from=builder /app/dist ./dist
 
-# Railway memberikan port melalui env PORT
+# Railway memberikan PORT
 ENV PORT $PORT
 EXPOSE $PORT
 
 # Jalankan server
-CMD ["serve", "-s", "dist", "-l", "0.0.0.0", "-p", "$PORT"]
+CMD ["serve", "-s", "dist", "-l", "tcp://0.0.0.0:$PORT"]
