fix fe railway 17

--- a/psha-web/Dockerfile
+++ b/psha-web/Dockerfile
@@ -27,5 +27,6 @@ ENV PORT $PORT
 EXPOSE $PORT
 
 # Jalankan server
-CMD ["serve", "-s", "dist", "-l", "0.0.0.0", "-p", "$PORT"]
+CMD ["sh", "-c", "serve -s dist -l 0.0.0.0:$PORT"]   # ✅ ini benar
+
 
