--- a/psha-web/Dockerfile
+++ b/psha-web/Dockerfile
@@ -16,4 +16,4 @@ COPY --from=builder /app/dist ./dist
 
 EXPOSE 3000
 
-CMD sh -c "serve -s dist -l 0.0.0.0:$PORT"
+CMD sh -c "serve -s dist -l 0.0.0.0:${PORT:-3000}"
