--- a/psha-web/Dockerfile
+++ b/psha-web/Dockerfile
@@ -16,4 +16,6 @@ COPY --from=builder /app/dist ./dist
 
 EXPOSE 3000
 
-CMD sh -c "serve -s dist -l 0.0.0.0:${PORT:-3000}"
+CMD ["sh", "-c", "serve -s dist -l :${PORT:-3000}"]
+
+
