--- a/psha-web/Dockerfile
+++ b/psha-web/Dockerfile
@@ -1,29 +1,28 @@
+# ============================
 # Stage 1: Build
+# ============================
 FROM node:20 AS builder
 WORKDIR /app
 
-# Copy dependencies
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm ci --legacy-peer-deps
 
-# Copy source
-COPY . ./
-
-# Build Vite
+COPY . .
 RUN npm run build
 
+# ============================
 # Stage 2: Serve
+# ============================
 FROM node:20-alpine AS runner
 WORKDIR /app
 
 RUN npm install -g serve
 
-# Copy hasil build
 COPY --from=builder /app/dist ./dist
 
-# Railway akan inject $PORT
+# Railway injects PORT → fallback ke 3000
 ENV PORT=3000
 EXPOSE 3000
 
-# ✅ serve butuh format -l :$PORT
-CMD ["sh", "-c", "serve -s dist -l :${PORT}"]
+# ✅ pakai sh -c agar ekspansi ${PORT} jalan
+CMD ["sh", "-c", "serve -s dist -l :${PORT:-3000}"]
