fix fe railway 23

--- a/psha-web/nginx.conf
+++ b/psha-web/nginx.conf
@@ -1,6 +1,5 @@
 server {
-    listen 3000;
-
+    listen ${PORT};
     server_name _;
 
     root /usr/share/nginx/html;
@@ -10,7 +9,6 @@ server {
         try_files $uri /index.html;
     }
 
-    # Proxy ke API FastAPI (opsional kalau backend jalan di Railway juga)
     location /api/ {
         proxy_pass https://sha-api-production.up.railway.app/;
         proxy_set_header Host $host;
