--- a/psha-web/nginx.conf
+++ b/psha-web/nginx.conf
@@ -1,7 +1,5 @@
 server {
-    listen ${PORT};
-    server_name _;
-
+    listen 80;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -9,8 +7,13 @@ server {
         try_files $uri /index.html;
     }
 
+    # Pastikan config.js bisa diakses
+    location /config.js {
+        add_header Cache-Control "no-cache";
+    }
+
     location /api/ {
-        proxy_pass https://sha-api-production.up.railway.app/api/;
+        proxy_pass https://sha-api-production.up.railway.app/api/v1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
