--- a/psha-web/Dockerfile
+++ b/psha-web/Dockerfile
@@ -8,7 +8,7 @@ RUN npm run build
 FROM nginx:1.27-alpine
 WORKDIR /usr/share/nginx/html
 COPY --from=builder /app/dist ./
-COPY config.js ./          # masukkan placeholder config.js
+COPY /public/config.js ./          # masukkan placeholder config.js
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 RUN apk add --no-cache gettext
 COPY entrypoint.sh /entrypoint.sh
