--- a/psha-web/nginx.conf
+++ b/psha-web/nginx.conf
@@ -3,17 +3,19 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # SPA routing
     location / {
         try_files $uri /index.html;
     }
 
-    # Pastikan config.js bisa diakses
+    # Pastikan config.js bisa diakses tanpa cache
     location /config.js {
         add_header Cache-Control "no-cache";
     }
 
+    # Proxy ke backend Railway
     location /api/ {
-        proxy_pass https://sha-api-production.up.railway.app/api/v1;
+        proxy_pass https://sha-api-production.up.railway.app/api/v1/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
