--- a/psha-web/nginx.conf
+++ b/psha-web/nginx.conf
@@ -7,7 +7,11 @@ server {
     location / {
         try_files $uri /index.html;
     }
-
+    
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+    }
     # Pastikan config.js bisa diakses tanpa cache
     location /config.js {
         add_header Cache-Control "no-cache";
