--- a/psha-web/nginx.conf
+++ b/psha-web/nginx.conf
@@ -9,9 +9,11 @@ server {
     }
     
     location = /favicon.ico {
+        root /usr/share/nginx/html;   # tambahkan ini
         log_not_found off;
         access_log off;
     }
+
     # Pastikan config.js bisa diakses tanpa cache
     location /config.js {
         add_header Cache-Control "no-cache";
