--- a/psha-web/nginx.conf
+++ b/psha-web/nginx.conf
@@ -1,30 +1,55 @@
 server {
     listen 80;
+    server_name _;
+
+    # Root folder untuk frontend
     root /usr/share/nginx/html;
     index index.html;
 
-    # SPA routing
-    location / {
-        try_files $uri /index.html;
-    }
-    
+    # ========================================
+    # Favicon & file statis langsung
+    # ========================================
     location = /favicon.ico {
-        root /usr/share/nginx/html;   # tambahkan ini
+        root /usr/share/nginx/html;
         log_not_found off;
         access_log off;
     }
 
-    # Pastikan config.js bisa diakses tanpa cache
+    location /assets/ {
+        root /usr/share/nginx/html;
+    }
+
     location /config.js {
+        root /usr/share/nginx/html;
         add_header Cache-Control "no-cache";
     }
 
-    # Proxy ke backend Railway
+    # ========================================
+    # SPA routing (React)
+    # ========================================
+    location / {
+        try_files $uri /index.html;
+    }
+
+    # ========================================
+    # Proxy API ke backend Railway
+    # ========================================
     location /api/ {
         proxy_pass https://sha-api-production.up.railway.app/api/v1/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Optional timeout
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
     }
+
+    # ========================================
+    # Logging minimal
+    # ========================================
+    error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log combined;
 }
