--- a/psha-web/package.json
+++ b/psha-web/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "start": "serve -s dist -l :${PORT:-3000}",
+    "start": "serve -s dist -l $PORT",
     "preview": "vite preview --port ${PORT:-3000} --host",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
