--- a/psha-web/package.json
+++ b/psha-web/package.json
@@ -32,6 +32,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.31",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.3.3",
     "vite": "^7.1.2"
   }
