add sistem login

--- a/psha-api/alembic.ini
+++ b/psha-api/alembic.ini
@@ -1,24 +1,25 @@
+# alembic.ini - final version
 # A generic, single database configuration.
 
 [alembic]
 # path ke migration scripts (folder migrations/)
 script_location = %(here)s/migrations
 
-# prefix file migration
+# prefix file migration (optional)
 # file_template = %%(rev)s_%%(slug)s
 
 # kalau mau recursive cari version files
 # recursive_version_locations = false
 
-# path_separator default
+# path separator default
 path_separator = os
 
 # encoding saat generate revision
 output_encoding = utf-8
 
-# URL database (ubah sesuai docker-compose service db kamu)
-# Format: postgresql+psycopg2://USER:PASSWORD@HOST:PORT/DBNAME
-sqlalchemy.url = postgresql+psycopg2://psha:psha@psha-db:5432/pshadb
+# URL database (akan di-override di env.py via settings.DATABASE_URL)
+# Format contoh placeholder, env.py yang pakai settings.DATABASE_URL
+sqlalchemy.url = env_var('DATABASE_URL')
 
 [post_write_hooks]
 
