--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
-# === Dependencies ===
+# === Node / Frontend ===
 node_modules/
 .pnp
 .pnp.js
-
-# === Build output ===
 dist/
 build/
 
+# === Python / Backend ===
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+
 # === Environment files ===
-.env*
+.env
+.env.*
 !.env.example
 
 # === Logs ===
@@ -16,6 +24,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+*.log
 
 # === Editor & OS files ===
 .vscode/
@@ -26,14 +35,6 @@ Thumbs.db
 # === Coverage / testing ===
 coverage/
 *.lcov
-
-# === Python (FastAPI backend) ===
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.db
-*.sqlite3
 
 # === Docker ===
 db_data/
