--- a/psha-api/requirements.txt
+++ b/psha-api/requirements.txt
@@ -10,5 +10,8 @@ scipy
 openquake.engine==3.17.1
 alembic
 
-
-
+# Auth & Security
+python-jose[cryptography]
+passlib[bcrypt]
+authlib
+python-dotenv
