fix login api 7

--- a/psha-api/requirements.txt
+++ b/psha-api/requirements.txt
@@ -11,9 +11,10 @@ scipy
 openquake.engine==3.17.1
 alembic
 
-# Auth & Security
+
 python-jose[cryptography]
 passlib[bcrypt]
 httpx
 authlib
 python-dotenv
+python-multipart
