--- a/psha-api/requirements.txt
+++ b/psha-api/requirements.txt
@@ -5,7 +5,7 @@ pydantic
 pydantic-settings
 sqlalchemy
 psycopg2-binary==2.9.7
-numpy==1.26.5
+numpy>=2.0.0
 pandas==2.1.1
 scipy==1.11.3
 openquake.engine==3.17.1
