--- a/psha-api/requirements.txt
+++ b/psha-api/requirements.txt
@@ -6,8 +6,8 @@ pydantic-settings
 sqlalchemy
 psycopg2-binary==2.9.7
 numpy>=2.0.0
-pandas==2.1.1
-scipy==1.11.3
+pandas>=2.2.2
+scipy>=1.14.0
 openquake.engine==3.17.1
 h5py==3.14.0
 alembic
