--- a/psha-web/package.json
+++ b/psha-web/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^2.2.7",
     "axios": "^1.11.0",
     "chart.js": "^4.4.0",
+    "framer-motion": "^12.23.12",
     "gh-pages": "^6.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.469.0",
